--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8", 
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.0",
     "react-test-renderer": "18.3.1",
